--- a/src/componentes/Header.css
+++ b/src/componentes/Header.css
@@ -34,7 +34,7 @@ img[alt="menu"] {
   width: 40px;
 }
 
-input {
+.Header-container2 input {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   background-color: white;
