--- a/src/componentes/Footer.css
+++ b/src/componentes/Footer.css
@@ -1,17 +1,14 @@
-.footer {
+.Footer {
   background-color: rgb(199, 199, 199);
   display: flex;
-  justify-content: space-between;
-  padding: 20px;
+  justify-content: space-around;
   color: white;
-  font-size: 10px;
+  font-size: 12px;
   text-align: center;
+  padding: 5px;
+  margin-top: 100px;
 }
 
-.footer-neg {
+.Footer-neg {
   font-weight: bold;
-}
-footer div a {
-  color: white;
-  display: flex;
 }
