--- a/src/componentes/Header.css
+++ b/src/componentes/Header.css
@@ -4,8 +4,12 @@
 }
 
 .Header-container {
-  background-color: rgb(199, 199, 199);
-  padding: 15px;
+  background-color: rgb(0, 0, 0);
+  font-family: sans-serif;
+  font-weight: bold;
+  padding: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,8 +18,7 @@
 }
 
 .Header-container2 {
-  background-color: rgb(199, 199, 199);
-  padding: 15px;
+  background-color: rgb(0, 0, 0);
   padding-right: 0;
   padding-left: 5;
   display: flex;
@@ -31,29 +34,35 @@ img[alt="imgPerfil"] {
 }
 
 img[alt="menu"] {
-  width: 40px;
+  width: 30px;
+  margin-left: 5px;
+}
+
+.Header-lupa img {
+  height: 20px;
 }
 
 .Header-container2 input {
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
   background-color: white;
   border: none;
   outline: none;
-  height: 40px;
+  height: 33px;
   width: 100%;
 }
 
 .Header-lupa {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
   background-color: white;
-  height: 20px;
-  padding: 10px;
+  height: 23px;
+  padding: 5px;
 }
 
-a {
+.Header-container2 a {
   text-decoration: none;
-  color: black;
-  padding: 10px;
+  color: #f7cd2d;
+  padding: 5px;
+  font-size: 13px;
 }
