--- a/src/componentes/ArticuloHome.css
+++ b/src/componentes/ArticuloHome.css
@@ -27,13 +27,13 @@
   margin: 10px;
   /* width: 100%; */
   height: 120px;
-  background-color: aliceblue;
+  background-color: white;
   display: flex;
   flex-direction: row;
 }
 
 .ArticuloHome-divImg {
-  background-color: aliceblue;
+  background-color: white;
   padding: 5px;
   padding-right: 10px;
   display: flex;
