modificacion menu header

--- a/src/componentes/Header.css
+++ b/src/componentes/Header.css
@@ -59,7 +59,7 @@ img[alt="menu"] {
   padding: 5px;
 }
 
-.Header-container2 a {
+.Header-container a {
   text-decoration: none;
   color: #f7cd2d;
   padding: 5px;
