--- a/src/componentes/Categorias.css
+++ b/src/componentes/Categorias.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   align-items: flex-start;
+  overflow: auto;
 }
 
 .Categorias-conteiner img {
@@ -17,11 +18,13 @@
   color: #ffffff;
   padding-top: 5px;
   text-align: center;
-  font-size: 6.9pt;
+  font-size: 6.5pt;
+  width: 64px;
 }
 
 .Categorias-conteiner div {
-  margin: 7px;
+  margin-top: 7px;
+  margin-bottom: 7px;
   display: flex;
   flex-direction: column;
   align-items: center;
