--- a/src/componentes/Footer.css
+++ b/src/componentes/Footer.css
@@ -1,5 +1,69 @@
-.Footer {
+/* FOOTER */
+
+.Footer-footer {
   display: none;
+}
+
+.Footer-menu nav {
+  height: 100%;
+  width: 100%;
+}
+.Footer-menu {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+
+/* MENU FOOTER */
+
+.Footer-menu {
+  background-color: #333333;
+  height: auto;
+  margin-top: 100px;
+}
+.Footer-nav {
+  font-size: 20px;
+}
+.Footer-ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.Footer-ul li {
+  display: flex;
+}
+.nav-text a {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  font-size: 25px;
+}
+.nav-no-token a {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  font-size: 25px;
+  padding: 10px;
+}
+
+.nav-text a span {
+  font-size: 10px;
+}
+.nav-text img {
+  border-radius: 100%;
+  font-size: 30px;
+  background-color: green;
+}
+.nav-no-token {
+  text-decoration: none;
+  color: white;
+}
+.nav-no-token span {
+  text-decoration: none;
 }
 
 @media (min-width: 640px) {
@@ -7,7 +71,7 @@
     font-weight: bold;
     padding: 20px;
   }
-  .Footer {
+  .Footer-footer {
     background-color: #333333;
     display: flex;
     justify-content: space-around;
@@ -19,5 +83,8 @@
   }
   .Footer-logo {
     width: 80px;
+  }
+  .Footer-menu {
+    display: none;
   }
 }
