lin de redireccionamiento por categoria y otros

--- a/src/componentes/Header.css
+++ b/src/componentes/Header.css
@@ -59,7 +59,7 @@ img[alt="menu"] {
   padding: 5px;
 }
 
-.Header-container a {
+.Header-container p {
   text-decoration: none;
   color: #f7cd2d;
   padding: 5px;
