--- a/src/componentes/Footer.css
+++ b/src/componentes/Footer.css
@@ -1,4 +1,8 @@
 /* FOOTER */
+.Footer {
+  position: sticky;
+  bottom: 0px;
+}
 
 .Footer-footer {
   display: none;
@@ -17,7 +21,7 @@
 /* MENU FOOTER */
 
 .Footer-menu {
-  background-color: #333333;
+  background-color: #000000;
   height: auto;
   margin-top: 100px;
 }
