--- a/src/componentes/Articulos/ShowArticles.css
+++ b/src/componentes/Articulos/ShowArticles.css
@@ -53,4 +53,9 @@
   justify-content: space-between;
   align-items: baseline;
   flex-direction: row;
+  max-width: 100%;
+}
+
+.ArticuloHome {
+  width: 100%;
 }
