--- a/src/routes/Perfil.css
+++ b/src/routes/Perfil.css
@@ -1,3 +1,19 @@
+.Perfil-img {
+  display: flex;
+}
+
+.Perfil-foto-de-perfil {
+  height: 100px;
+  background-color: black;
+  border-radius: 100px;
+  text-align: center;
+  margin: 20px auto;
+}
+.Perfil-valoraciones {
+  margin: auto;
+  text-align: center;
+}
+
 .Perfil-botones {
   display: flex;
   flex-direction: column;
@@ -6,12 +22,4 @@
 .Perfil-botones button {
   background-color: none;
   color: #f8d334;
-}
-
-.perfil-img {
-  margin: auto;
-}
-
-.perfil-label {
-  margin: auto;
 }
