--- a/src/componentes/Header-Footer/Footer.css
+++ b/src/componentes/Header-Footer/Footer.css
@@ -1,7 +1,8 @@
 /* FOOTER */
 .Footer {
-  position: sticky;
+  position: fixed;
   bottom: 0px;
+  width: 100%;
 }
 
 .Footer-footer {
@@ -11,11 +12,6 @@
 .Footer-menu nav {
   height: 100%;
   width: 100%;
-}
-.Footer-menu {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
 }
 
 /* MENU FOOTER */
@@ -33,18 +29,31 @@
   justify-content: space-around;
   align-items: center;
 }
-.Footer-ul li {
+
+.Nav-token {
   display: flex;
+  justify-content: start;
+  align-items: center;
+  list-style: none;
 }
-.nav-text a {
+.Nav-token a,
+.Nav-no-token a {
+  text-decoration: none;
+  color: #f7cd2d;
+}
+.Nav-token a:hover,
+.Nav-no-token a:hover {
+  background-color: #f7cd2d;
+  color: #000000;
+}
+
+.Nav-token a {
   display: flex;
   flex-direction: column;
-  height: 100%;
   align-items: center;
-  align-content: center;
   font-size: 25px;
 }
-.nav-no-token a {
+.Nav-no-token a {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -54,19 +63,23 @@
   padding: 10px;
 }
 
-.nav-text a span {
+.Nav-token a span {
   font-size: 10px;
 }
-.nav-text img {
+.Nav-token img {
   border-radius: 100%;
   font-size: 30px;
   background-color: green;
 }
-.nav-no-token {
+.Nav-no-token {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  list-style: none;
   text-decoration: none;
   color: white;
 }
-.nav-no-token span {
+.Nav-no-token span {
   text-decoration: none;
 }
 
@@ -76,7 +89,7 @@
     padding: 20px;
   }
   .Footer-footer {
-    background-color: #333333;
+    background-color: #000000;
     display: flex;
     justify-content: space-around;
     color: white;
