--- a/src/componentes/Header-Footer/NavBar.css
+++ b/src/componentes/Header-Footer/NavBar.css
@@ -26,8 +26,7 @@
   left: 0px;
   transition: 350px;
 }
-.nav-text,
-.nav-no-token {
+.nav-text {
   display: flex;
   justify-content: start;
   align-items: center;
