--- a/src/componentes/Usuarios/Perfil.css
+++ b/src/componentes/Usuarios/Perfil.css
@@ -1,6 +1,9 @@
 .Perfil-img {
   display: flex;
 }
+.Perfil-info {
+  padding: 10px;
+}
 
 .Perfil-foto-de-perfil {
   height: 100px;
@@ -9,17 +12,53 @@
   text-align: center;
   margin: 20px auto;
 }
+
 .Perfil-valoraciones {
   margin: auto;
   text-align: center;
 }
 
-.Perfil-botones {
+.Perfil-form {
+  margin-bottom: 100px;
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  text-align: center;
+}
+.Perfil-form input {
+  font-size: 18px;
+  margin: 5px;
+  background: transparent;
+  outline: none;
+  height: 35px;
+  border: none;
+  width: 50%;
+  margin: 10px auto;
+  text-align: center;
+}
+.Perfil-form input:hover {
+  border-bottom: 2px solid;
+}
+.Perfil-label {
+  padding: 5px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.Perfil-botones {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .Perfil-botones button {
-  background-color: none;
-  color: #f8d334;
+  width: 50%;
+  border-radius: 5px;
+  border: none;
+  font-size: 18px;
+  height: 50px;
+  margin: 20px;
+  background-color: #f8d334;
+  color: #000;
 }
