--- a/src/componentes/Header-Footer/Footer.css
+++ b/src/componentes/Header-Footer/Footer.css
@@ -19,7 +19,6 @@
 .Footer-menu {
   background-color: #000000;
   height: auto;
-  margin-top: 100px;
 }
 .Footer-nav {
   font-size: 20px;
@@ -84,6 +83,9 @@
 }
 
 @media (min-width: 640px) {
+  .Footer {
+    position: relative;
+  }
   .Footer-neg {
     font-weight: bold;
     padding: 20px;
