--- a/src/componentes/Usuarios/Perfil.css
+++ b/src/componentes/Usuarios/Perfil.css
@@ -31,10 +31,11 @@
   outline: none;
   height: 35px;
   border: none;
-  width: 50%;
+  width: auto;
   margin: 10px auto;
   text-align: center;
 }
+
 .Perfil-form input:hover {
   border-bottom: 2px solid;
 }
