--- a/src/componentes/Vender/UploadFile.css
+++ b/src/componentes/Vender/UploadFile.css
@@ -17,6 +17,7 @@ div .UploadFile form label {
   width: 50px;
   height: 50px;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .UploadFile input[type="file"] {
