--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   background-image: url("./old-is-gold-horizontal.png");
   background-position: center;
   background-size: cover;
+  background-color: black;
   height: 50px;
   padding: 20px;
 }
