--- a/src/componentes/Articulos/ShowArticles.css
+++ b/src/componentes/Articulos/ShowArticles.css
@@ -5,9 +5,9 @@
 .ArticuloHome h2 {
   text-align: left;
   font-family: sans-serif;
-  font-weight: bold;
   font-style: italic;
   font-size: 13pt;
+  color: black;
 }
 
 .ArticuloHome p {
@@ -15,13 +15,14 @@
   text-align: left;
   font-family: sans-serif;
   font-size: 9pt;
+  color: gray;
 }
 
 .ArticuloHome .ArticuloHome-precio {
   text-align: left;
   font-family: sans-serif;
   font-size: 15pt;
-  color: #f8d334;
+  color: #f89334;
 }
 
 .ArticuloHome-container {
