--- a/src/componentes/Categorias/Categorias.css
+++ b/src/componentes/Categorias/Categorias.css
@@ -23,9 +23,22 @@
 }
 
 .Categorias-container div {
-  margin-top: 7px;
-  margin-bottom: 7px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+img[alt="flecha1"] {
+  width: 10px;
+  position: relative;
+  top: 50px;
+  left: 5%;
+}
+img[alt="flecha2"] {
+  width: 10px;
+  position: relative;
+  top: 50px;
+  left: 90%;
 }
