--- a/src/routes/AllChatsRoom.css
+++ b/src/routes/AllChatsRoom.css
@@ -1,14 +1,14 @@
-.ChatRoom-h2 {
+.AllChatsRoom-h2 {
   margin-left: 10px;
 }
-.ChatRoom-cabecera {
+.AllChatsRoom-cabecera {
   display: flex;
   padding: 10px;
   border-bottom: 1px solid gray;
   align-items: center;
 }
 
-.ChatRoom-imagen-perfil {
+.AllChatsRoom-imagen-perfil {
   border-radius: 100px;
   width: 30px;
   background-color: black;
