--- a/src/componentes/Articulos/ShowArticles.css
+++ b/src/componentes/Articulos/ShowArticles.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 .ArticuloHome-divImg {
@@ -42,9 +43,6 @@
   height: 100px;
   overflow: hidden;
 }
-.ArticuloHome-divImg img {
-}
-
 .ArticuloHome-corazon {
   width: 25px;
   height: 25px;
@@ -61,4 +59,34 @@
 
 .ArticuloHome {
   width: 100%;
+}
+
+.ArticuloHome-botones {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 10px;
+}
+.ArticuloHome-botones p {
+  border-radius: 5px;
+  width: 100px;
+  padding: 5px;
+  background-color: #f8d334;
+  color: black;
+}
+
+.ArticulosHome-todo {
+  background-color: white;
+}
+
+.ArticuloHome-calificar {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+.ArticuloHome-calificar p {
+  width: 150px;
+  background-color: #f8d334;
+  border-radius: 5px;
+  padding: 5px;
 }
