--- a/src/componentes/Valoraciones/Valoraciones.css
+++ b/src/componentes/Valoraciones/Valoraciones.css
@@ -6,26 +6,41 @@
 }
 
 .Valoraciones-respuesta-comprador {
-  width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: aliceblue;
   padding: 10px;
   padding-bottom: 0px;
 }
+
+.Valoraciones-contenedor {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  /* padding: 10px; */
+}
+
 .Valoraciones-estrellas {
   display: flex;
-  padding: 10px;
 }
 .Valoraciones-texto {
   display: flex;
-  text-align: left;
 }
+
+.Valoracion-texto h2,
+.Valoracion-texto h3 {
+  text-align: left;
+  padding: 0;
+  margin-left: 10px;
+}
+
 .Valoracion-texto-comentario {
   font-size: 15px;
-  padding: 5px;
 }
 .Valoracion-texto-comentario p {
   text-align: left;
+  margin-left: 10px;
 }
 .Valoracion-texto-titulos {
   font-size: 15px;
@@ -45,20 +60,10 @@
 }
 
 .Valoraciones-img {
-  max-width: 50px;
-  max-height: 50px;
-}
-
-.Valoraciones-contenedor {
-  width: 50px;
-  height: 50px;
-  border: 1px solid;
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  /* padding: 10px; */
+  max-width: 65px;
+  max-height: 65px;
 }
 
 .Valoraciones-separador {
-  padding-top: 40px;
+  padding-top: 30px;
 }
