--- a/src/componentes/Articulos/ShowArticles.css
+++ b/src/componentes/Articulos/ShowArticles.css
@@ -2,7 +2,7 @@
   text-align: left;
   font-family: sans-serif;
   font-style: italic;
-  font-size: 13pt;
+  font-size: 14px;
   color: black;
 }
 
@@ -10,14 +10,14 @@
   display: block;
   text-align: left;
   font-family: sans-serif;
-  font-size: 9pt;
+  font-size: 12px;
   color: gray;
 }
 
 .ArticuloHome .ArticuloHome-precio {
   text-align: left;
   font-family: sans-serif;
-  font-size: 15pt;
+  font-size: 16px;
   color: #f89334;
 }
 
