--- a/src/routes/ArticuloPorId.css
+++ b/src/routes/ArticuloPorId.css
@@ -9,7 +9,8 @@
   padding-bottom: 50px;
 }
 .ArticuloPorId div.fechaTitulo {
-  padding: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   display: flex;
   justify-content: center;
 }
@@ -41,6 +42,7 @@ img[alt="visto"] {
   align-items: center;
   padding: 20px;
   padding-top: 0px;
+  margin-top: 5px;
 }
 
 .ArticuloPorId-datos-usuario2 {
