--- a/src/routes/ChatRoom.css
+++ b/src/routes/ChatRoom.css
@@ -44,6 +44,7 @@ div.ChatRoom-otro p {
 }
 
 div.ChatRoom-producto {
+  color: black;
   display: flex;
   align-items: center;
   justify-content: flex-start;
