--- a/src/componentes/Vender/UploadFile.css
+++ b/src/componentes/Vender/UploadFile.css
@@ -23,3 +23,12 @@ div .UploadFile form label {
 .UploadFile input[type="file"] {
   display: none;
 }
+
+.UploadFileProfile div label img {
+  width: 100px !important;
+  height: 100px !important;
+  background-color: black !important;
+  border-radius: 100px !important;
+  text-align: center !important;
+  margin: 20px auto !important;
+}
