--- a/src/componentes/Header-Footer/Footer.css
+++ b/src/componentes/Header-Footer/Footer.css
@@ -15,9 +15,14 @@
 }
 
 /* MENU FOOTER */
-
-.Footer-nav img {
+.FooterNav-imagen {
+  background-color: black;
+  height: 65px;
   width: 65px;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  border-radius: 50%;
+  background-size: 100% auto;
 }
 
 .Footer-nav .Footer-Perfil {
