--- a/src/routes/ArticuloPorId.css
+++ b/src/routes/ArticuloPorId.css
@@ -56,11 +56,12 @@ img[alt="visto"] {
   width: 50px;
 }
 
-.ArticuloPorId-img {
+/* .ArticuloPorId-img {
   max-width: 300px;
   max-height: 290px;
-}
+} */
 .ArticuloPorId-datos {
+  margin-top: 15px;
   justify-content: space-around;
   display: flex;
   padding: 20px;
@@ -74,12 +75,14 @@ img[alt="visto"] {
   height: 30px;
 }
 .ArticuloPorId-contenedor {
-  width: 320px;
-  height: 240px;
-  border: 1px solid;
-  display: flex;
-  justify-content: center;
   margin: auto;
+  border: 1px solid;
+  background-color: white;
+  height: 240px;
+  width: 320px;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% auto;
 }
 
 .ArticuloPorId-buttons button {
