--- a/src/componentes/Header-Footer/Header.css
+++ b/src/componentes/Header-Footer/Header.css
@@ -15,6 +15,7 @@
   align-items: center;
   list-style-type: none;
   height: 30px;
+  position: -webkit-sticky;
   position: sticky;
   top: 0px;
   z-index: 100;
